# clipersal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  smoke_e2e.py
.github/workflows/: build-appimage.yml  release.yml  tests.yml
packaging/: clipersal.spec  clipersal_installer.iss  entry_clipersal.py  entry_trigger.py  generate_icon.py
packaging/linux/: AppRun.clipersal  AppRun.trigger  build_appimage.sh  clipersal-trigger.desktop  clipersal.desktop
src/clipersal/: __init__.py  autostart.py  brand.py  capture.py  cli.py  clip_metadata.py  concat.py  config.py  config_store.py  diagnostics.py  export.py  ffmpeg_utils.py  first_run_qt.py  gallery_window_qt.py  hotkey.py  hotkey_widget_qt.py  ipc.py  ipc_client.py  main_window_qt.py  monitors.py  platform_detect.py  player_qt.py  portal_screencast.py  qt_widgets.py  screenshots.py  signals.py  (+12 more)
tests/: test_autostart.py  test_brand.py  test_capture.py  test_cli.py  test_clip_metadata.py  test_concat.py  test_config.py  test_config_store.py  test_diagnostics.py  test_export.py  test_ffmpeg_utils.py  test_first_run_qt.py  test_gallery_window_qt.py  test_hotkey.py  test_hotkey_widget_qt.py  test_ipc.py  test_main_window_qt.py  test_monitors.py  test_platform_detect.py  test_player_qt.py  test_portal_screencast.py  test_qt_widgets.py  test_screenshots.py  test_settings_window_qt.py  test_signals.py  test_status_dot.py  test_theme.py  test_thumbnails.py  test_toast_qt.py  test_tray_qt.py  test_trigger.py  test_update_check.py  test_wayland_gstreamer.py  test_window_capture.py
(+1 files in other folders)
