[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipersal"
version = "0.1.0"
description = "Clipersal (by Lablooms) -- cross-platform instant replay / rolling screen-capture buffer tool. Catch the moment you bloomed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pynput>=1.7,<2",
    "PySide6>=6",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6",
    "pyinstaller-hooks-contrib",
]
test = [
    "pytest>=7",
]

[project.scripts]
clipersal = "clipersal.cli:main"
clipersal-trigger = "clipersal.trigger:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clipersal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
